fix: body horizontal overflow setted to hidden

--- a/css/general.css
+++ b/css/general.css
@@ -13,6 +13,8 @@
 }
 
 body {
+    max-width: 100%;
+    overflow-x: hidden;
     font-size: 18px;
     font-family: "Roboto", sans-serif;
     line-height: 1.2;
